--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2017-2-23  3.6.19
+    Fix a bug for the CMakeList.
+    Add the vcxproj.filters files for the C++ projects.
+
 2017-2-22  3.6.18
     Update the license and header information.
 
