--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2017-2-27  3.6.21
+    Fix a bug for adding and removing the properties of the struct.
+
 2017-2-24  3.6.20
     Fix a bug for renaming the agent and setting its base class.
 
