--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2017-3-7  3.6.23
+    Fix a bug for adding the struct of UnityEngine.Vector3.
+    Fix a bug for the size_t value.
+    Fix a bug for setting the prefab.
+
 2017-3-2  3.6.22
     Fix a bug for exporting the codes for the UnityEngine.Vector3.
     Fix a bug for the char* type.
