--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,9 @@
+2017-4-1  3.6.27
+    Improve setting the properties of the node.
+    Supporpt removing all instances when debugging.
+    Fix a bug for filtering the properties when having selected one.
+
 2017-3-23  3.6.26
-    Support renaming the types.
     Do not send the update message when debugging.
     Fix a bug for setting the var when debugging for C#.
     Fix a bug for generating codes for Agent* as the return type of the method.
