--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2017-5-15  3.6.34
+    Fix a bug for the Parallel node.
+
 2017-5-4  3.6.33
     Remove the inheritance for the agent type of the referenced behaviors.
     Fix a bug for the Parallel node.
