--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2017-08-03  3.6.36
+	fix a bug of accessing task params when calling a sub tree
+
 2017-7-11  3.6.35
     Improve the C++ types generation.
     Fix a bug of time edition of the Wait node.
